# R-Type

./: .gitignore  CMakeLists.txt  DockerFile  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_000000_000005.html  dir_000003_000001.html  dir_000007_000004.html  dir_000007_000006.html  dir_000008_000005.html  dir_000009_000006.html  dir_000010_000001.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.js  dir_1a445cb237d74f7a5f8d11ec3b0585cc_dep.map  dir_1a445cb237d74f7a5f8d11ec3b0585cc_dep.md5  dir_30ff900869959b17197a70705703ad2d.html  dir_30ff900869959b17197a70705703ad2d.js  dir_30ff900869959b17197a70705703ad2d_dep.map  dir_30ff900869959b17197a70705703ad2d_dep.md5  dir_585f228707e4b8d1363f696d19810de2.html  dir_585f228707e4b8d1363f696d19810de2.js  dir_585f228707e4b8d1363f696d19810de2_dep.map  dir_585f228707e4b8d1363f696d19810de2_dep.md5  dir_71db3c9ac669ad0e48d6cd88f7e1e924.html  dir_71db3c9ac669ad0e48d6cd88f7e1e924.js  dir_71db3c9ac669ad0e48d6cd88f7e1e924_dep.map  dir_71db3c9ac669ad0e48d6cd88f7e1e924_dep.md5  dir_922c588100a187620fdc1533bc178f73.html  dir_922c588100a187620fdc1533bc178f73.js  dir_922c588100a187620fdc1533bc178f73_dep.map  dir_922c588100a187620fdc1533bc178f73_dep.md5  dir_93084806b1643eafcd4f5f08b5b2abae.html  dir_93084806b1643eafcd4f5f08b5b2abae.js  dir_93084806b1643eafcd4f5f08b5b2abae_dep.map  dir_93084806b1643eafcd4f5f08b5b2abae_dep.md5  dir_de457a8cedd5be0a844fca27cbfe7965.html  (+67 more)
.github/workflows/: docker-build.yml  doxygen-pages.yml  mirror.yml
Client/: CMakeLists.txt  Client.cpp  Client.hpp  README.md  main.cpp
Client/include/: Client.hpp
Client/src/: Client.cpp
Documentation/: Client_README.md  ECS_README.md  SERVER_README.md  Server_README.md  protocol.md
ECS/: CMakeLists.txt  README.md  Registry.hpp
ECS/components/: Collidable.hpp  Controllable.hpp  Drawable.hpp  Entity.hpp  Position.hpp  Projectile.hpp  Registry.hpp  SparseArray.hpp  Velocity.hpp
ECS/include/: Controllable.h  Drawable.h  Entity.h  Game.hpp
ECS/src/: Game.cpp  main.cpp
ECS/systems/: CollisionSystem.hpp  ControlSystem.hpp  Draw.h  DrawSystem.hpp  Position.h  PositionSystem.hpp  ProjectileSystem.hpp
GameEngine/: ManageElement.cpp  README.md
GameEngine/Entity/: Bullet.cpp  Obstacles.cpp  Player.cpp
GameEngine/Layers/: Game.cpp  Lobby.cpp
GameEngine/include/: Game.hpp  ManageElement.hpp  ManageScene.hpp
GameEngine/src/: Game.cpp  ManageScene.cpp  main.cpp
Network/include/: PacketType.hpp
Network/src/: PacketHandler.cpp
R-Type/: CMakeLists.txt
R-Type/include/: AGame.hpp  GameLoop.hpp  GameState.hpp  IGame.hpp
R-Type/src/: AGame.cpp  GameLoop.cpp  GameState.cpp  PlayerAction.cpp
Server/: CMakeLists.txt  ClientRegister.hpp  README.md  Server.cpp  Server.hpp  main.cpp
Server/Errors/: Throws.hpp
Server/Network/: Data.hpp  Packet.cpp  Packet.hpp  PacketHandler.cpp  PacketHandler.hpp  PacketType.hpp  ThreadSafeQueue.hpp
Server/include/: ClientRegister.hpp  Server.hpp  server.hpp
Server/src/: Server.cpp  main.cpp  server.cpp
d0/d08/: Projectile_8hpp__dep__incl.map  Projectile_8hpp__dep__incl.md5
d0/d1b/: structControllable.html
d0/d4c/: Drawable_8hpp.html  Drawable_8hpp.js  Drawable_8hpp_source.html
d0/d5b/: structDrawable-members.html
d0/da2/: Throws_8hpp__incl.map  Throws_8hpp__incl.md5
d0/db5/: Position_8hpp__dep__incl.map  Position_8hpp__dep__incl.md5
d0/df4/: structPosition.html
d1/d07/: Server_8hpp__incl.map  Server_8hpp__incl.md5
d1/d0a/: ProjectileSystem_8hpp.html  ProjectileSystem_8hpp.js  ProjectileSystem_8hpp_adbec9bb96dec7a4cb651810204320b04_cgraph.map  ProjectileSystem_8hpp_adbec9bb96dec7a4cb651810204320b04_cgraph.md5  ProjectileSystem_8hpp_source.html
d1/d6b/: classRType_1_1NtsException__inherit__graph.map
d1/d85/: ProjectileSystem_8hpp__incl.map  ProjectileSystem_8hpp__incl.md5
d1/dcc/: PositionSystem_8hpp.html  PositionSystem_8hpp.js  PositionSystem_8hpp_a4f4ebd576db3ef94e9c63d881e91bee2_cgraph.map  PositionSystem_8hpp_a4f4ebd576db3ef94e9c63d881e91bee2_cgraph.md5  PositionSystem_8hpp_source.html
d2/d0a/: Client_8hpp__dep__incl.map  Client_8hpp__dep__incl.md5
d2/d35/: namespaceRType.html  namespaceRType.js
d2/d8a/: Registry_8hpp__dep__incl.map  Registry_8hpp__dep__incl.md5
d2/daa/: classClientRegister-members.html
d2/dc1/: DrawSystem_8hpp__incl.map  DrawSystem_8hpp__incl.md5
d2/dde/: classRType_1_1SpriteElement-members.html
d3/d40/: CollisionSystem_8hpp.html  CollisionSystem_8hpp.js  (+5 more)
game_engine/: README.md
html/: _bullet_8hpp.html  _bullet_8hpp_source.html  _client_2main_8cpp.html  _client_2main_8cpp.js  _client_8cpp.html  _client_8hpp.html  _client_8hpp.js  _client_8hpp_source.html  _client___r_e_a_d_m_e_8md.html  _client_register_8hpp.html  _client_register_8hpp.js  _client_register_8hpp_source.html  _collidable_8hpp.html  _collidable_8hpp.js  _collidable_8hpp_source.html  _collision_system_8hpp.html  _collision_system_8hpp.js  _collision_system_8hpp_source.html  _control_system_8hpp.html  _control_system_8hpp.js  _control_system_8hpp_source.html  _controllable_8hpp.html  _controllable_8hpp.js  _controllable_8hpp_source.html  _data_8hpp.html  _data_8hpp.js  _data_8hpp_source.html  _draw_system_8hpp.html  _draw_system_8hpp.js  _draw_system_8hpp_source.html  _drawable_8hpp.html  _drawable_8hpp.js  _drawable_8hpp_source.html  _e_c_s___r_e_a_d_m_e_8md.html  _enemy_8hpp.html  _enemy_8hpp_source.html  _entity_8hpp.html  _entity_8hpp_source.html  _g_a_m_e_e_n_g_i_n_e___r_e_a_d_m_e_8md.html  _game_8cpp.html  (+219 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+39 more)
tests/: test_client.cpp  test_game.cpp
(+346 files in other folders)
